Sticky footer on mobile fix

--- a/source/stylesheets/modules/_layout.scss
+++ b/source/stylesheets/modules/_layout.scss
@@ -6,6 +6,8 @@
 body{
   display: flex;
   flex-direction: column;
+  height: auto;
+  min-height: 100%;
 }
 
 .footer-separator{
