--- a/source/stylesheets/modules/_main-container.scss
+++ b/source/stylesheets/modules/_main-container.scss
@@ -4,9 +4,10 @@ $container-bg: $white;
 $container-border: $border;
 $container-shadow: 0 2px 7px rgba(black,.1);
 
-$container-padding-x: 2rem;
-$container-padding-y: 2rem;
-
+$container-padding-x: 1rem;
+$container-padding-y: 1rem;
+$container-padding-2x: 2rem;
+$container-padding-2y: 2rem;
 
 /* Main container */
 
@@ -18,4 +19,8 @@ $container-padding-y: 2rem;
 
 .main-container__content{
   padding: $container-padding-x $container-padding-y;
+  
+  @include breakpoint(medium){
+    padding: $container-padding-2x $container-padding-2y;
+  }
 }
